spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-client-configmap-event-reload-multiple-apps/spring-cloud-kubernetes-configuration-watcher-test-app/src/test/resources/app-a/spring-cloud-kubernetes-configuration-watcher-app-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-configuration-watcher-app-a-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-configuration-watcher-app-a
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-configuration-watcher-app-a
    spec:
      containers:
        - name: spring-cloud-kubernetes-configuration-watcher-app-a
          image: docker.io/springcloud/spring-cloud-kubernetes-configuration-watcher-app-a
          imagePullPolicy: IfNotPresent
          env:
            - name: SPRING_PROFILES_ACTIVE
              value: bus-kafka          
            - name: spring.kafka.bootstrap-servers
              value: kafka:9092
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          ports:
            - containerPort: 8080
